--- a/travel_recommendations.html
+++ b/travel_recommendations.html
@@ -194,6 +194,12 @@
             <a href="about.html">About Us</a>
             <a href="contact.html">Contact Us</a>
         </div>
+         <div class="search-container">
+            <input type="text" id="search-input" placeholder="Search recommendations..." />
+            <button type="button" id="search-button">Search</button>
+            <button type="button" id="reset-button">Reset</button>
+        </div>
+
     </div>
 
     <div class="container">
