--- a/contact.html
+++ b/contact.html
@@ -166,7 +166,7 @@
         <img src="./images/logo.png" alt="Logo" class="logo"> <!-- Insira aqui o caminho para o seu logo -->
         <span style="color: white; font-size: 24px; margin-left: 25px;">Travel Recommendation</span>
         <div class="links">
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
             <a href="contact.html">Contact Us</a>
         </div>
