--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         <img src="./images/logo.png" alt="Logo" class="logo">
         <span style="color: white; font-size: 24px; margin-left: 25px;">Travel Recommendation</span>
         <div class="links">
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
             <a href="contact.html">Contact Us</a>
         </div>
